<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ds_ic_nav_home"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ds_ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/nav_create_plus"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/nav_dialogs"
        android:icon="@drawable/ds_ic_nav_chats"
        android:title="@string/nav_dialogs" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ds_ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
